// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`control.number $ariaDetails 1`] = `
<wup-num>
  <label
    for="txt1"
  >
    <span>
      <input
        autocomplete="off"
        id="txt1"
        placeholder=" "
        role="spinbutton"
        type="text"
      />
      <strong />
      <span
        class="wup-hidden"
      >
        Some details for screen-readers
      </span>
    </span>
    <button
      aria-hidden="true"
      clear=""
      tabindex="-1"
      type="button"
    />
  </label>
</wup-num>
`;

exports[`control.number $ariaDetails 2`] = `
<wup-num>
  <label
    for="txt1"
  >
    <span>
      <input
        autocomplete="off"
        id="txt1"
        placeholder=" "
        role="spinbutton"
        type="text"
      />
      <strong />
    </span>
    <button
      aria-hidden="true"
      clear=""
      tabindex="-1"
      type="button"
    />
  </label>
</wup-num>
`;

exports[`control.number $ariaSpeak 1`] = `
<wup-num>
  <label
    for="txt1"
  >
    <span>
      <input
        aria-describedby="my-test-id txt2 my-test-id2"
        autocomplete="off"
        id="txt1"
        placeholder=" "
        role="spinbutton"
        type="text"
      />
      <strong />
    </span>
    <button
      aria-hidden="true"
      clear=""
      tabindex="-1"
      type="button"
    />
  </label>
  <section
    aria-atomic="true"
    aria-live="off"
    class="wup-hidden"
    id="txt2"
  >
    Hello
  </section>
</wup-num>
`;

exports[`control.number $ariaSpeak 2`] = `
<wup-num>
  <label
    for="txt1"
  >
    <span>
      <input
        aria-describedby="my-test-id my-test-id2"
        autocomplete="off"
        id="txt1"
        placeholder=" "
        role="spinbutton"
        type="text"
      />
      <strong />
    </span>
    <button
      aria-hidden="true"
      clear=""
      tabindex="-1"
      type="button"
    />
  </label>
</wup-num>
`;

exports[`control.number $show/$hide error 1`] = `
<wup-num>
  <label
    for="txt1"
  >
    <span>
      <input
        autocomplete="off"
        id="txt1"
        placeholder=" "
        role="spinbutton"
        type="text"
      />
      <strong />
    </span>
    <button
      aria-hidden="true"
      clear=""
      tabindex="-1"
      type="button"
    />
  </label>
</wup-num>
`;

exports[`control.number $show/$hide error 2`] = `
<wup-num
  invalid=""
>
  <label
    for="txt1"
  >
    <span>
      <input
        aria-describedby="txt2"
        autocomplete="off"
        id="txt1"
        placeholder=" "
        role="spinbutton"
        type="text"
      />
      <strong />
    </span>
    <button
      aria-hidden="true"
      clear=""
      tabindex="-1"
      type="button"
    />
  </label>
  <wup-popup
    aria-atomic="true"
    aria-live="off"
    error=""
    id="txt2"
    role="alert"
    style="opacity: 0;"
  >
    <span
      class="wup-hidden"
    />
    <span>
      Some custom message here
    </span>
  </wup-popup>
</wup-num>
`;

exports[`control.number $show/$hide error 3`] = `
<wup-num>
  <label
    for="txt1"
  >
    <span>
      <input
        autocomplete="off"
        id="txt1"
        placeholder=" "
        role="spinbutton"
        type="text"
      />
      <strong />
    </span>
    <button
      aria-hidden="true"
      clear=""
      tabindex="-1"
      type="button"
    />
  </label>
</wup-num>
`;

exports[`control.number common tests render + styles 1`] = `<wup-num />`;

exports[`control.number common tests render + styles 2`] = `
<style>
  .wup-hidden, [wup-hidden] {
position: absolute;
height:1px; width:1px;
overflow:hidden;
clip:rect(1px,1px,1px,1px);
min-width:initial;
padding:0;}
  :root {
          --base-bg: #fff;
          --base-text: #232323;
          --base-focus: #00778d;
          --base-btn-bg: #009fbc;
          --base-btn-text: #fff;
          --base-btn-focus: #005766;
          --base-btn2-bg: var(--base-btn-text);
          --base-btn2-text: var(--base-btn-bg);
          --base-btn3-bg: var(--base-bg);
          --base-btn3-text: inherit;
          --base-sep: #e4e4e4;
          --border-radius: 6px;
          --anim-time: 200ms;
          --anim: var(--anim-time) cubic-bezier(0, 0, 0.2, 1) 0ms;
        }
  :root {
        --ctrl-padding: 1.5em 1em 0.5em 1em;
        --ctrl-focus: var(--base-focus);
        --ctrl-focus-label: var(--base-focus);
        --ctrl-selected: var(--ctrl-focus-label);
        --ctrl-label: #5e5e5e;
        --ctrl-icon: var(--ctrl-label);
        --ctrl-icon-size: 1em;
        --ctrl-bg: var(--base-bg);
        --ctrl-border: #e6e6e6;
        --ctrl-border-radius: var(--border-radius);
        --ctrl-err-text: #ad0000;
        --ctrl-err-bg: #fff4fa;
        --ctrl-err-icon-valid: green;
        --ctrl-invalid-border: red;
        --wup-icon-cross: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='768' height='768'%3E%3Cpath d='M674.515 93.949a45.925 45.925 0 0 0-65.022 0L384.001 318.981 158.509 93.487a45.928 45.928 0 0 0-65.022 0c-17.984 17.984-17.984 47.034 0 65.018l225.492 225.494L93.487 609.491c-17.984 17.984-17.984 47.034 0 65.018s47.034 17.984 65.018 0l225.492-225.492 225.492 225.492c17.984 17.984 47.034 17.984 65.018 0s17.984-47.034 0-65.018L449.015 383.999l225.492-225.494c17.521-17.521 17.521-47.034 0-64.559z'/%3E%3C/svg%3E");
        --wup-icon-check: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='768' height='768'%3E%3Cpath d='M37.691 450.599 224.76 635.864c21.528 21.32 56.11 21.425 77.478 0l428.035-426.23c21.47-21.38 21.425-56.11 0-77.478s-56.11-21.425-77.478 0L263.5 519.647 115.168 373.12c-21.555-21.293-56.108-21.425-77.478 0s-21.425 56.108 0 77.478z'/%3E%3C/svg%3E");
        --wup-icon-dot: url("data:image/svg+xml,%3Csvg viewBox='0 0 100 100' xmlns='http://www.w3.org/2000/svg'%3E%3Ccircle cx='50' cy='50' r='20'/%3E%3C/svg%3E");
        --wup-icon-back: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='768' height='768'%3E%3Cpath d='m509.8 16.068-329.14 329.14c-21.449 21.449-21.449 56.174 0 77.567l329.14 329.14c21.449 21.449 56.174 21.449 77.567 0s21.449-56.174 0-77.567l-290.36-290.36 290.36-290.36c21.449-21.449 21.449-56.173 0-77.567-21.449-21.394-56.173-21.449-77.567 0z'/%3E%3C/svg%3E");
      }
  :root {
      --ctrl-clear-hover: rgba(255,0,0,0.1);
     }
  
      WUP-NUM {
        --ctrl-focus-border: var(--ctrl-focus);
        contain: style;
        display: block;
        margin-bottom: 20px;
        box-shadow: 0 0 0 1px var(--ctrl-border);
        border-radius: var(--ctrl-border-radius);
        background: var(--ctrl-bg);
        cursor: pointer;
        -webkit-tap-highlight-color: transparent;
      }
      WUP-NUM strong,
      WUP-NUM legend {
        color: var(--ctrl-label);
        pointer-events: none;
      }
      WUP-NUM[invalid],
      WUP-NUM[invalid] &gt; [menu] {
        --ctrl-focus-border: var( --ctrl-invalid-border);
        box-shadow: 0 0 3px 0 var(--ctrl-focus-border);
      }
      WUP-NUM:focus-within,
      WUP-NUM:focus-within &gt; [menu] {
        z-index: 90010;
        box-shadow: 0 0 2px 1px var(--ctrl-focus-border);
      }
      WUP-NUM:focus-within strong,
      WUP-NUM:focus-within legend {
        color: var(--ctrl-focus-label);
        pointer-events: initial;
      }
      [disabled] WUP-NUM,
      WUP-NUM[disabled] {
        opacity: 0.6;
        cursor: not-allowed;
        -webkit-user-select: none;
        user-select: none;
      }
      [disabled] WUP-NUM &gt; *,
      WUP-NUM[disabled] &gt; * {
        pointer-events: none;
      }
      WUP-NUM label {
        display: flex;
        align-items: center;
        box-sizing: border-box;
        font: inherit;
        cursor: inherit;
        padding: var(--ctrl-padding);
        padding-top: 0;
        padding-bottom: 0;
      }
      WUP-NUM input,
      WUP-NUM textarea {
        padding: 0;
        margin: 0;
        cursor: inherit;
      }
      WUP-NUM [contenteditable=true] {
        margin: var(--ctrl-padding);
        margin-left: 0;
        margin-right: 0;
        cursor: inherit;
      }
      WUP-NUM strong {
        cursor: inherit;
      }
      WUP-NUM strong:empty {
        display: none;
      }
      WUP-NUM [aria-required="true"] + strong:after,
      WUP-NUM fieldset[aria-required="true"] &gt; legend:after {
        content: "*";
        font-size: larger;
        font-weight: bolder;
        line-height: 0;
      }
      WUP-NUM [error] {
        cursor: pointer;
        font-size: small;
        color: var(--ctrl-err-text);
        background: var(--ctrl-err-bg);
        overflow: auto;
        overflow: overlay;
      }
      WUP-NUM [error] ul {
        margin:0; padding:2px 4px 2px;
      }
      WUP-NUM [error] li {
        display: flex;
        align-items: center;
        margin-left: -5px;
      }
      WUP-NUM [error] li:before {
        content: '';
        --ctrl-icon-img: var(--wup-icon-dot);
        --ctrl-icon: var(--ctrl-err-text);
        
display: inline-block;
width: var(--ctrl-icon-size);
min-height: var(--ctrl-icon-size);
box-sizing: content-box;
margin: 0;
padding: 5px;
flex: 0 0 auto;
align-self: stretch;
border: none;
box-shadow: none;
background: var(--ctrl-icon);
-webkit-mask-size: var(--ctrl-icon-size);
mask-size: var(--ctrl-icon-size);
-webkit-mask-repeat: no-repeat;
mask-repeat: no-repeat;
-webkit-mask-position: center;
mask-position: center;
-webkit-mask-image: var(--ctrl-icon-img);
mask-image: var(--ctrl-icon-img);
      }
      WUP-NUM [error] li[valid] {
        color: var(--ctrl-err-icon-valid);
      }
      WUP-NUM [error] li[valid]:before {
        content: '';
        --ctrl-icon-img: var(--wup-icon-check);
        --ctrl-icon: var(--ctrl-err-icon-valid);
      }
      WUP-NUM:focus-within [error] {
        max-height: none;
      }
      @media (hover: hover) and (pointer: fine) {
        WUP-NUM:hover,
        WUP-NUM:hover&gt;[menu],
        WUP-NUM[hovered],
        WUP-NUM[hovered]&gt;[menu] {
          box-shadow: 0 0 2px 1px var(--ctrl-focus-border);
        }
      }
        WUP-NUM {
          contain: style;
          cursor: text;
        }
        WUP-NUM label &gt; span {
          width: 100%;
          position: relative;
          display: flex;
          flex-direction: row-reverse;
        }
        WUP-NUM input,
        WUP-NUM textarea,
        WUP-NUM [maskholder],
        WUP-NUM [prefix],
        WUP-NUM [postfix] {
          padding: var(--ctrl-padding);
          padding-left: 0;
          padding-right: 0;
          font: inherit;
          color: inherit;
          margin: 0;
          text-overflow: ellipsis;
          overflow: hidden;
          white-space: nowrap;
        }
        WUP-NUM input,
        WUP-NUM textarea,
        WUP-NUM [contenteditable=true],
        WUP-NUM [maskholder],
        WUP-NUM [postfix] {
          width: 100%;
          box-sizing: border-box;
          border: none;
          background: none;
          outline: none;
        }
        WUP-NUM [prefix],
        WUP-NUM [postfix] {
          color: var(--ctrl-label);
          flex-shrink: 0;
        }
        WUP-NUM [maskholder],
        WUP-NUM [prefix],
        WUP-NUM [postfix] {
          display: none;
          pointer-events: none;
          text-overflow: initial;
          white-space: pre;
        }
        WUP-NUM [postfix] {
          position: absolute;
        }
        WUP-NUM [maskholder] {
          position: absolute;
          opacity: 0.65;
        }
        WUP-NUM [maskholder]&gt;i,
        WUP-NUM [postfix]&gt;i {
          visibility: hidden;
          font: inherit;
          white-space: pre;
        }
        WUP-NUM input:-webkit-autofill,
        WUP-NUM textarea:-webkit-autofill,
        WUP-NUM [contenteditable=true]:-webkit-autofill {
          font: inherit;
          -webkit-background-clip: text;
        }
        WUP-NUM input:autofill,
        WUP-NUM textarea:autofill,
        WUP-NUM [contenteditable=true]:autofill {
          font: inherit;
          background-clip: text;
        }
        WUP-NUM strong {
          display: block;
          position: absolute;
          top: 50%;
          left: 0;
          padding: 0;
          margin: 0;
          box-sizing: border-box;
          max-width: 100%;
          text-overflow: ellipsis;
          overflow: hidden;
          white-space: nowrap;
          transform-origin: top left;
          transform: translateY(-50%);
          font-weight: normal;
          text-decoration: none;
        }
        @media not all and (prefers-reduced-motion) {
          WUP-NUM strong {
            transition: top var(--anim), transform var(--anim), color var(--anim);
          }
        }
        WUP-NUM input:not(:focus)::placeholder,
        WUP-NUM textarea:not(:focus)::placeholder {
          color: transparent;
        }
        WUP-NUM:focus-within strong,
        WUP-NUM input:not(:placeholder-shown) + strong,
        WUP-NUM textarea:not(:placeholder-shown) + strong,
        WUP-NUM [contenteditable=true]:not(:empty) + strong,
        WUP-NUM legend {
          top: 0.2em;
          transform: scale(0.9);
        }
        WUP-NUM:focus-within [maskholder],
        WUP-NUM:focus-within [prefix],
        WUP-NUM:focus-within [postfix],
        WUP-NUM input:not(:placeholder-shown) ~ [prefix],
        WUP-NUM input:not(:placeholder-shown) ~ [postfix],
        WUP-NUM textarea:not(:placeholder-shown) ~ [prefix],
        WUP-NUM textarea:not(:placeholder-shown) ~ [postfix] {
          display: inline-block;
        }
        /* style for icons */
        WUP-NUM label&gt;button,
        WUP-NUM label&gt;button:after,
        WUP-NUM label:after,
        WUP-NUM label:before {
          
display: inline-block;
width: var(--ctrl-icon-size);
min-height: var(--ctrl-icon-size);
box-sizing: content-box;
margin: 0;
padding: 5px;
flex: 0 0 auto;
align-self: stretch;
border: none;
box-shadow: none;
background: var(--ctrl-icon);
-webkit-mask-size: var(--ctrl-icon-size);
mask-size: var(--ctrl-icon-size);
-webkit-mask-repeat: no-repeat;
mask-repeat: no-repeat;
-webkit-mask-position: center;
mask-position: center;
-webkit-mask-image: var(--ctrl-icon-img);
mask-image: var(--ctrl-icon-img);
          -webkit-mask-image: none;
          mask-image: none;
        }
        WUP-NUM label:after {
          cursor: pointer;
          margin-right: calc(var(--ctrl-icon-size) / -2);
        }
        WUP-NUM label:before {
          cursor: pointer;
          margin-left: calc(var(--ctrl-icon-size) / -2);
        }
        WUP-NUM label&gt;button {
          contain: strict;
          z-index: 1;
          font-size: inherit;
        }
        WUP-NUM button[clear] {
          display: none;
          position: relative;
          margin-right: -0.5em;
          align-self: center;
          cursor: pointer;
          --ctrl-icon-img: var(--wup-icon-cross);
          background: none;
          mask: none;
          -webkit-mask: none;
        }
        WUP-NUM:focus-within button[clear] {
          display: block;
        }
        WUP-NUM button[clear=back] {
          --ctrl-icon-img: var(--wup-icon-back);
        }
        WUP-NUM button[clear]:after {
          content: "";
          padding: 0;
          -webkit-mask-image: var(--ctrl-icon-img);
          mask-image: var(--ctrl-icon-img);
        }
        WUP-NUM button[clear]:after,
        WUP-NUM button[clear]:before {
          position: absolute;
          top: 50%; left: 50%;
          transform: translate(-50%, -50%);
          width: 100%;
          height: 100%;
          border-radius: 50%;
        }
        @media (hover: hover) and (pointer: fine) {
          WUP-NUM:hover button[clear] {
            display: block;
          }
          WUP-NUM button[clear]:hover:before {
            content: "";
            box-shadow: inset 0 0 0 99999px var(--ctrl-clear-hover);
          }
          WUP-NUM button[clear]:hover:after {
            background: var(--ctrl-err-text);
          }
        }
        WUP-NUM[disabled] button[clear],
        WUP-NUM[readonly] button[clear] {
          display: none;
          pointer-events: none;
        }
</style>
`;

exports[`control.number common tests snapshot of $defaults 1`] = `
{
  "autoComplete": null,
  "autoFocus": false,
  "clearActions": 2,
  "clearButton": true,
  "debounceMs": 0,
  "disabled": false,
  "focusDebounceMs": 100,
  "format": null,
  "label": null,
  "mask": "",
  "maskholder": "",
  "name": null,
  "postfix": "",
  "prefix": "",
  "readOnly": false,
  "selectOnFocus": false,
  "storage": "local",
  "storageKey": "",
  "validateDebounceMs": 500,
  "validationCase": 13,
  "validationRules": {
    "$alwaysInvalid": [Function],
    "$alwaysValid": [Function],
    "max": [Function],
    "min": [Function],
    "required": [Function],
  },
  "validationShowAll": false,
  "validations": null,
}
`;

exports[`control.number common tests snapshot of $defaults 2`] = `undefined`;

exports[`control.number common tests snapshot of $defaults 3`] = `
[
  "disabled",
  "readonly",
  "w-autocomplete",
  "w-autofocus",
  "w-clearactions",
  "w-clearbutton",
  "w-debouncems",
  "w-disabled",
  "w-focusdebouncems",
  "w-format",
  "w-initvalue",
  "w-label",
  "w-mask",
  "w-maskholder",
  "w-name",
  "w-postfix",
  "w-prefix",
  "w-readonly",
  "w-selectonfocus",
  "w-storage",
  "w-storagekey",
  "w-validatedebouncems",
  "w-validationcase",
  "w-validationrules",
  "w-validations",
  "w-validationshowall",
]
`;

exports[`control.number validations $options.validationShowAll 1`] = `
<wup-num
  invalid=""
  required=""
>
  <label
    for="txt1"
  >
    <span>
      <input
        aria-describedby="txt2"
        aria-required="true"
        autocomplete="off"
        id="txt1"
        placeholder=" "
        role="spinbutton"
        type="text"
      />
      <strong />
    </span>
    <button
      aria-hidden="true"
      clear=""
      tabindex="-1"
      type="button"
    />
  </label>
  <wup-popup
    aria-atomic="true"
    aria-live="off"
    error=""
    id="txt2"
    role="alert"
    style="display: none;"
  >
    <span
      class="wup-hidden"
    />
    <span>
      This field is required
    </span>
    <ul
      aria-hidden="true"
    >
      <li>
        Min value is 5
      </li>
      <li>
        Max value is 1,000
      </li>
    </ul>
  </wup-popup>
</wup-num>
`;

exports[`control.number validations $options.validationShowAll 2`] = `
<wup-num
  required=""
>
  <label
    for="txt1"
  >
    <span>
      <input
        aria-required="true"
        autocomplete="off"
        id="txt1"
        placeholder=" "
        role="spinbutton"
        type="text"
      />
      <strong />
    </span>
    <button
      aria-hidden="true"
      clear=""
      tabindex="-1"
      type="button"
    />
  </label>
</wup-num>
`;

exports[`control.number validations $options.validationShowAll 3`] = `
<wup-num
  invalid=""
  required=""
>
  <label
    for="txt1"
  >
    <span>
      <input
        aria-describedby="txt5"
        aria-required="true"
        autocomplete="off"
        id="txt1"
        placeholder=" "
        role="spinbutton"
        type="text"
      />
      <strong>
        First Name
      </strong>
    </span>
    <button
      aria-hidden="true"
      clear=""
      tabindex="-1"
      type="button"
    />
  </label>
  <wup-popup
    aria-atomic="true"
    aria-live="off"
    error=""
    id="txt5"
    role="alert"
    style="display: none;"
  >
    <span
      class="wup-hidden"
    >
      Error for First Name:
    </span>
    <span>
      This field is required
    </span>
  </wup-popup>
</wup-num>
`;

exports[`control.number validations options.validationCase 1`] = `
<wup-num>
  <label
    for="txt1"
  >
    <span>
      <input
        autocomplete="off"
        id="txt1"
        placeholder=" "
        role="spinbutton"
        type="text"
      />
      <strong />
    </span>
    <button
      aria-hidden="true"
      clear=""
      tabindex="-1"
      type="button"
    />
  </label>
</wup-num>
`;

exports[`control.number validations options.validationCase 2`] = `
<wup-num
  invalid=""
  required=""
  style=""
>
  <label
    for="txt1"
  >
    <span>
      <input
        aria-describedby="txt3"
        aria-required="true"
        autocomplete="off"
        id="txt1"
        inputmode="numeric"
        placeholder=" "
        role="spinbutton"
        type="text"
      />
      <strong>
        First Input
      </strong>
    </span>
    <button
      aria-hidden="true"
      clear="back"
      tabindex="-1"
      type="button"
    />
  </label>
  <wup-popup
    aria-atomic="true"
    aria-live="off"
    error=""
    id="txt3"
    role="alert"
    style="display: none;"
  >
    <span
      class="wup-hidden"
    >
      Error for First Input:
    </span>
    <span>
      This field is required
    </span>
  </wup-popup>
</wup-num>
`;

exports[`control.number validations options.validationCase 3`] = `
<wup-num
  invalid=""
  required=""
  style=""
>
  <label
    for="txt1"
  >
    <span>
      <input
        aria-describedby="txt4"
        aria-required="true"
        autocomplete="off"
        id="txt1"
        inputmode="numeric"
        placeholder=" "
        role="spinbutton"
        type="text"
      />
      <strong>
        First Input
      </strong>
    </span>
    <button
      aria-hidden="true"
      clear=""
      tabindex="-1"
      type="button"
    />
  </label>
  <wup-popup
    aria-atomic="true"
    aria-live="off"
    error=""
    id="txt4"
    style="display: none;"
  >
    <span
      class="wup-hidden"
    >
      Error for First Input:
    </span>
    <span>
      custom err here
    </span>
  </wup-popup>
</wup-num>
`;

exports[`control.number validations options.validationCase 4`] = `
<wup-num
  invalid=""
  required=""
  style=""
>
  <label
    for="txt1"
  >
    <span>
      <input
        aria-describedby="txt5"
        aria-required="true"
        autocomplete="off"
        id="txt1"
        inputmode="numeric"
        placeholder=" "
        role="spinbutton"
        type="text"
      />
      <strong>
        First Input
      </strong>
    </span>
    <button
      aria-hidden="true"
      clear=""
      tabindex="-1"
      type="button"
    />
  </label>
  <wup-popup
    aria-atomic="true"
    aria-live="off"
    error=""
    id="txt5"
    role="alert"
    style="display: none;"
  >
    <span
      class="wup-hidden"
    >
      Error for First Input:
    </span>
    <span>
      This field is required
    </span>
  </wup-popup>
</wup-num>
`;

exports[`control.number with form 1`] = `
<wup-form
  role="form"
>
  <wup-num>
    <label
      for="txt1"
    >
      <span>
        <input
          autocomplete="off"
          id="txt1"
          placeholder=" "
          role="spinbutton"
          type="text"
        />
        <strong>
          First Input
        </strong>
      </span>
      <button
        aria-hidden="true"
        clear=""
        tabindex="-1"
        type="button"
      />
    </label>
  </wup-num>
</wup-form>
`;
